cmake_minimum_required(VERSION 2.8)

add_subdirectory(audio)
add_subdirectory(face)
add_subdirectory(human)
add_subdirectory(picture)
add_subdirectory(planned_path)
add_subdirectory(point)
add_subdirectory(pose)
add_subdirectory(msg_metadata)
add_subdirectory(pose_stamped)
add_subdirectory(quaternion)
add_subdirectory(qr_code)
add_subdirectory(time)
